# SortTest

./: .gitmodules  CMakeLists.txt  Factory.hpp  GUI.c  GUI.h  GUI_conscreen.c  GUI_impl.h  GUI_impl_ti.c  GUI_impl_unix.c  GUI_impl_win.c  Makefile.am  Makefile.in  README  Readme.org  Session.vim  Sort.c  Sort.cpp  Sort.hpp  SortList.c  SortList.cpp  SortList.h  SortList.hpp  SortTest.c  SortTest.h  Util.cpp  Util.hpp  aclocal.m4  argparse.cpp  argparse.h  argparse.hpp  config.sub  configure  configure.ac  configure~  csv.c  csv.h  tags  test.cpp
Algorithms/: Algos.hpp  BubbleSort.cpp  GulagSort.cpp  QuickSort.cpp  ReculinSort.cpp  SelectionSort.cpp  StalinSort.cpp  TooManyCocktails.cpp
List/: List.c  List.h
UI/: GUI.cpp  GUI.hpp  GUI_conscreen.c  GUI_impl_ti.c  OS.hpp  UI.hpp  impl_Raylib.cpp
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
examples/: Liste.txt  SortTest  SortTest.tns  bruh.txt  example_BubbleSort.sh  example_RadixSort.sh  example_SelectionSort.sh  example_Visualize.sh  out.txt
src/: GUI.c  GUI.h  GUI_impl.h  GUI_impl_ti.c  GUI_impl_unix.c  GUI_impl_win.c  List.c  List.h  Makefile.am  Makefile.in  Sort.c  Sort.h  SortList.c  SortTest.c  SortTest.h  argparse.c  argparse.h  csv.c  csv.h  nspire.c  nspire.h
